--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,9 +10,8 @@ restoremavencache: &restoremavencache
     - maven-repo-v3-{{ .Branch }}-
     - maven-repo-v3-
 mainenvironment: &mainenvironment
-  environment:
-    MAVEN_OPTS: -Xmx3200m
-    BUILD_ARGS: -B -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn
+  MAVEN_OPTS: -Xmx3200m
+  BUILD_ARGS: -B -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn
 setup: &setup
   docker:
     - image: circleci/openjdk:8-jdk-browsers
@@ -195,7 +194,7 @@ jobs:
   "Unit tests (MySQL)":
     docker:
       - image: circleci/openjdk:8-jdk-browsers
-          <<: *mainenvironment
+          environment: *mainenvironment
       - image: circleci/mysql:5.7
         environment:
           MYSQL_ROOT_PASSWORD: rootpw
