--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,5 +1,23 @@
 version: 2
 
+alltags: &alltags
+  filters:
+    tags:
+      only: /.*/
+restoremavencache: &restoremavencache
+  keys:
+    - maven-repo-v3-{{ .Branch }}-{{ checksum "pom.xml" }}
+    - maven-repo-v3-{{ .Branch }}-
+    - maven-repo-v3-
+mainenvironment: &mainenvironment
+  MAVEN_OPTS: -Xmx3200m
+  BUILD_ARGS: -B -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn
+setup: &setup
+  docker:
+    - image: circleci/openjdk:8-jdk-browsers
+      environment: *mainenvironment
+  working_directory: ~/orko
+
 notify:
   webhooks:
     - url: https://webhooks.gitter.im/e/d1538bdca20be1aa31d8
@@ -8,28 +26,29 @@ workflows:
   version: 2
   all:
     jobs:
-      - "Compile and build":
-          filters: # required since `deploy` has tag filters AND requires `build`
-            tags:
-              only: /.*/
+      - "Compile and build": *alltags
       - "Unit tests (all)":
           requires:
             - "Compile and build"
-          filters: # required since `deploy` has tag filters AND requires `build`
-            tags:
-              only: /.*/
+          <<: *alltags
       - "Unit tests (MySQL)":
           requires:
             - "Compile and build"
-          filters: # required since `deploy` has tag filters AND requires `build`
-            tags:
-              only: /.*/
+          <<: *alltags
       - "End-to-end tests":
           requires:
             - "Compile and build"
-          filters: # required since `deploy` has tag filters AND requires `build`
+          <<: *alltags
+      - "Docker Hub":
+          requires:
+            - "Unit tests (all)"
+            - "Unit tests (MySQL)"
+            - "End-to-end tests"
+          filters:
             tags:
-              only: /.*/
+              only: /^.*\..*/
+            branches:
+              only: master
       - "Deploy release":
           requires:
             - "Unit tests (all)"
@@ -43,19 +62,10 @@ workflows:
 
 jobs:
   "Compile and build":
-    docker:
-      - image: circleci/openjdk:8-jdk
-        environment:
-          MAVEN_OPTS: -Xmx3200m
-          BUILD_ARGS: -B -U -Dskip.failsafe.tests=true -DskipTests=true -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn
-    working_directory: ~/orko
+    <<: *setup
     steps:
       - checkout
-      - restore_cache:
-          keys:
-            - maven-repo-v3-{{ .Branch }}-{{ checksum "pom.xml" }}
-            - maven-repo-v3-{{ .Branch }}-
-            - maven-repo-v3-
+      - restore_cache: *restoremavencache
       - restore_cache:
           keys:
             - node-v5-{{ .Branch }}-{{ checksum "orko-ui/package-lock.json" }}
@@ -63,7 +73,7 @@ jobs:
             - node-v5-
       - run:
           name: Build
-          command: mvn ${BUILD_ARGS} -T 1C -Pui,bundle clean install
+          command: mvn ${BUILD_ARGS} -T 1C -U -Pui,bundle clean install -Dskip.failsafe.tests=true -DskipTests=true
       - save_cache:
           paths:
             - ~/.m2
@@ -91,20 +101,11 @@ jobs:
           path: ~/checkstyle
 
   "Unit tests (all)":
-    docker:
-      - image: circleci/openjdk:8-jdk
-        environment:
-          MAVEN_OPTS: -Xmx3200m
-          BUILD_ARGS: -B -Dskip.failsafe.tests=true -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn
-    working_directory: ~/orko
+    <<: *setup
     steps:
       - attach_workspace:
           at: /home/circleci
-      - restore_cache:
-          keys:
-            - maven-repo-v3-{{ .Branch }}-{{ checksum "pom.xml" }}
-            - maven-repo-v3-{{ .Branch }}-
-            - maven-repo-v3-
+      - restore_cache: *restoremavencache
       - run:
           name: Upgrade Maven
           command: |
@@ -121,7 +122,8 @@ jobs:
               export SONAR_TARGETS="-Pci org.jacoco:jacoco-maven-plugin:prepare-agent@default-prepare-agent surefire:test org.jacoco:jacoco-maven-plugin:report@default-report sonar:sonar"
               export SONAR_ARGS="-Dsonar.host.url=https://sonarcloud.io \
                   -Dsonar.organization=${CIRCLE_PROJECT_USERNAME} \
-                  -Dsonar.login=${SONARQUBE_TOKEN}"
+                  -Dsonar.login=${SONARQUBE_TOKEN}
+                  -Dskip.failsafe.tests=true"
               if [[ -n "$CIRCLE_BRANCH" ]]; then
                 mvn ${BUILD_ARGS} -T 1C ${SONAR_TARGETS} ${SONAR_ARGS} \
                   -Dsonar.branch.name=${CIRCLE_BRANCH}
@@ -137,7 +139,7 @@ jobs:
               fi
             else
               echo "Test only"
-              mvn ${BUILD_ARGS} -T 1C surefire:test
+              mvn ${BUILD_ARGS} -T 1C surefire:test -Dskip.failsafe.tests=true
             fi
       - save_cache:
           paths:
@@ -155,23 +157,14 @@ jobs:
           path: ~/junit
 
   "End-to-end tests":
-    docker:
-      - image: circleci/openjdk:8-jdk-browsers
-        environment:
-          MAVEN_OPTS: -Xmx3200m
-          BUILD_ARGS: -B -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn
-    working_directory: ~/orko
+    <<: *setup
     steps:
       - run:
           name: Install packages
           command: sudo apt-get install xvfb libgtk2.0-0 libnotify-dev libgconf-2-4 libnss3 libxss1 libasound2
       - attach_workspace:
           at: /home/circleci
-      - restore_cache:
-          keys:
-            - maven-repo-v3-{{ .Branch }}-{{ checksum "pom.xml" }}
-            - maven-repo-v3-{{ .Branch }}-
-            - maven-repo-v3-
+      - restore_cache: *restoremavencache
       - restore_cache:
           keys:
             - node-e2e-v1-{{ .Branch }}-{{ checksum "orko-end-to-end-testing/package-lock.json" }}
@@ -204,10 +197,8 @@ jobs:
 
   "Unit tests (MySQL)":
     docker:
-      - image: circleci/openjdk:8-jdk
-        environment:
-          MAVEN_OPTS: -Xmx3200m
-          BUILD_ARGS: -B -Dskip.failsafe.tests=true -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn
+      - image: circleci/openjdk:8-jdk-browsers
+        environment: *mainenvironment
       - image: circleci/mysql:5.7
         environment:
           MYSQL_ROOT_PASSWORD: rootpw
@@ -218,11 +209,7 @@ jobs:
     steps:
       - attach_workspace:
           at: /home/circleci
-      - restore_cache:
-          keys:
-            - maven-repo-v3-{{ .Branch }}-{{ checksum "pom.xml" }}
-            - maven-repo-v3-{{ .Branch }}-
-            - maven-repo-v3-
+      - restore_cache: *restoremavencache
       - run:
           name: Waiting for MySQL to be ready
           command: |
@@ -238,7 +225,8 @@ jobs:
           command: |
             mvn ${BUILD_ARGS} -Pdbonly surefire:test \
               -Dmorf.mysql.noadmin=true \
-              -Dtestdb.url=mysql://open:sesame@127.0.0.1/test
+              -Dtestdb.url=mysql://open:sesame@127.0.0.1/test \
+              -Dskip.failsafe.tests=true
       - run:
           name: Saving test results (MySQL)
           command: |
@@ -250,30 +238,45 @@ jobs:
       - store_test_results:
           path: ~/junit
 
-  "Deploy release":
-    docker:
-      - image: circleci/openjdk:8-jdk
-        environment:
-          MAVEN_OPTS: -Xmx3200m
-          BUILD_ARGS: -B -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn
-    working_directory: ~/orko
+  "Docker Hub":
+    <<: *setup
     steps:
       - attach_workspace:
           at: /home/circleci
-      - restore_cache:
-          keys:
-            - maven-repo-v3-{{ .Branch }}-{{ checksum "pom.xml" }}
-            - maven-repo-v3-{{ .Branch }}-
-            - maven-repo-v3-
+      - restore_cache: *restoremavencache
+      - run:
+          name: Release to Docker Hub
+          command: |
+            if [[ (-n "$DOCKERHUB_USER") && (-n "$DOCKERHUB_PASSWORD") ]]; then
+              cd orko-app
+              export GIT_HASH=`git log -1 --pretty=%H`
+              if [[ -n "$CIRCLE_TAG" ]]; then
+                mvn ${BUILD_ARGS} -Pdockerhub jib:build -Ddocker.tag1="$GIT_HASH" -Ddocker.tag2="$CIRCLE_TAG"
+              else
+                if [[ (-n "$CIRCLE_BRANCH") && ("$CIRCLE_BRANCH" != "master") ]]; then
+                  echo "Skipping branch"
+                else
+                  mvn ${BUILD_ARGS} -Pdockerhub jib:build -Ddocker.tag1="$GIT_HASH" -Ddocker.tag2="latest"
+                fi
+              fi
+            else
+              echo "Docker Hub account details not supplied. Probably an external pull request."
+            fi
+
+  "Deploy release":
+    <<: *setup
+    steps:
+      - attach_workspace:
+          at: /home/circleci
+      - restore_cache: *restoremavencache
       - run:
           name: Release to Github (if tag and key available)
           command: |
             if [[ -n "$GITHUB_API_KEY" ]]; then
               if [[ -n "$CIRCLE_TAG" ]]; then
                 cd orko-app
-                mvn -B github-release:release \
-                  --settings ../etc/.maven-settings.xml \
-                  -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn
+                mvn ${BUILD_ARGS} github-release:release \
+                  --settings ../etc/.maven-settings.xml
               else
                 echo "Not a tag"
               fi
