--- a/orko-ui/package.json
+++ b/orko-ui/package.json
@@ -26,6 +26,7 @@
     "reconnecting-websocket": "^4.1.10",
     "redux": "^4.0.1",
     "redux-batched-actions": "^0.4.1",
+    "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
     "seamless-immutable": "^7.1.4",
