--- a/orko-app/pom.xml
+++ b/orko-app/pom.xml
@@ -162,10 +162,7 @@
             <version>1.3.0</version>
             <configuration>
               <to>
-                <image>docker.io/gruelbox/orko:${docker.tag1}</image>
-                <tags>
-                  <tag>${docker.tag2}</tag>
-                </tags>
+                <image>docker.io/gruelbox/orko:${docker.tag}</image>
                 <auth>
                   <username>${env.DOCKERHUB_USER}</username>
                   <password>${env.DOCKERHUB_PASSWORD}</password>
