--- a/pom.xml
+++ b/pom.xml
@@ -226,7 +226,7 @@
 
     <!--<xchange.stream.groupid>info.bitrich.xchange-stream</xchange.stream.groupid> -->
     <xchange.stream.groupid>com.gruelbox</xchange.stream.groupid>
-    <xchange.stream.version>4.3.16.3</xchange.stream.version>
+    <xchange.stream.version>4.3.16.4-SNAPSHOT</xchange.stream.version>
 
     <morf.groupid>com.github.badgerwithagun.morf</morf.groupid>
     <morf.version>0.1.3.badgerwithagun.2</morf.version>
