--- a/pom.xml
+++ b/pom.xml
@@ -233,6 +233,8 @@
 
     <dropwizard-https-redirect-version>0.0.5</dropwizard-https-redirect-version>
     <dropwizard-guice-box-version>0.0.6</dropwizard-guice-box-version>
+  
+    <asm.version>7.0</asm.version>
 
     <!-- Sonar -->
     <sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
@@ -243,6 +245,14 @@
 
   <dependencyManagement>
     <dependencies>
+      
+      <!-- Required by maven-compiler-plugin and maven-surefire-plugin on JDK9+ -->
+      <dependency>
+        <groupId>org.javassist</groupId>
+        <artifactId>javassist</artifactId>
+        <version>3.24.1-GA</version>
+      </dependency>
+      
       <dependency>
         <groupId>io.dropwizard</groupId>
         <artifactId>dropwizard-bom</artifactId>
@@ -250,6 +260,29 @@
         <type>pom</type>
         <scope>import</scope>
       </dependency>
+      
+      <!-- Required by dropwizard on JDK9+ -->
+      <dependency>
+          <groupId>javax.activation</groupId>
+          <artifactId>activation</artifactId>
+          <version>1.1.1</version>
+      </dependency>
+      <dependency>
+          <groupId>javax.xml.bind</groupId>
+          <artifactId>jaxb-api</artifactId>
+          <version>2.3.1</version>
+      </dependency>
+      <dependency>
+          <groupId>com.sun.xml.bind</groupId>
+          <artifactId>jaxb-core</artifactId>
+          <version>2.3.0.1</version>
+      </dependency>
+      <dependency>
+          <groupId>com.sun.xml.bind</groupId>
+          <artifactId>jaxb-impl</artifactId>
+          <version>2.3.2</version>
+      </dependency>
+      
       <dependency>
         <groupId>com.gruelbox</groupId>
         <artifactId>dropwizard-https-redirect</artifactId>
@@ -510,6 +543,14 @@
             <source>${maven.compiler.source}</source>
             <target>${maven.compiler.target}</target>
           </configuration>
+          <dependencies>
+            <!-- JDK9+ fix -->
+            <dependency>
+              <groupId>org.ow2.asm</groupId>
+              <artifactId>asm</artifactId>
+              <version>${asm.version}</version>
+            </dependency>
+          </dependencies>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -534,6 +575,14 @@
             </excludes>
             <useSystemClassLoader>false</useSystemClassLoader>
           </configuration>
+          <dependencies>
+            <!-- JDK9+ fix -->
+            <dependency>
+              <groupId>org.ow2.asm</groupId>
+              <artifactId>asm</artifactId>
+              <version>${asm.version}</version>
+            </dependency>
+          </dependencies>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
