Use a fixed Maven download. I know this is a bit ugly but it's way less hassle than checking checksums and multiple mirrors, and life is short.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -110,6 +110,13 @@ jobs:
           at: /home/circleci
       - restore_cache: *restoremavencache
       - run:
+          name: Upgrade Maven
+          command: |
+            cd
+            cp ~/orko/.circleci/apache-maven-3.6.1-bin.tar.gz .
+            tar xzvf apache-maven-3.6.1-bin.tar.gz
+            cd ~/orko
+      - run:
           name: Tests (plus Sonar if possible)
           command: |
             if [[ -n "$SONARQUBE_TOKEN" ]]; then
