--- a/orko-login/package.json
+++ b/orko-login/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "core-js": "^2.6.5",
+    "semantic-ui-vue": "^0.8.1",
     "vue": "^2.6.10",
     "vue-class-component": "^7.0.2",
     "vue-property-decorator": "^8.1.0"
@@ -31,6 +32,7 @@
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-vue": "^5.0.0",
     "prettier": "^1.18.2",
+    "tsconfig-paths-webpack-plugin": "^3.2.0",
     "typescript": "^3.4.3",
     "vue-template-compiler": "^2.6.10"
   }
