--- a/orko-ui/package.json
+++ b/orko-ui/package.json
@@ -43,7 +43,7 @@
     "jest-watch-typeahead": "0.3.1",
     "mini-css-extract-plugin": "0.5.0",
     "optimize-css-assets-webpack-plugin": "5.0.3",
-    "orko-semantic": "../orko-semantic",
+    "orko-semantic": "../orko-semantic/dist",
     "pnp-webpack-plugin": "1.5.0",
     "polished": "^3.4.1",
     "postcss-flexbugs-fixes": "4.1.0",
