--- a/orko-app/pom.xml
+++ b/orko-app/pom.xml
@@ -57,6 +57,11 @@
           <artifactId>orko-ui</artifactId>
           <version>${project.version}</version>
         </dependency>
+        <dependency>
+          <groupId>${project.groupId}</groupId>
+          <artifactId>orko-login</artifactId>
+          <version>${project.version}</version>
+        </dependency>
       </dependencies>
     </profile>
     <profile>
