--- a/orko-login/pom.xml
+++ b/orko-login/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <artifactId>orko-ui</artifactId>
+  <artifactId>orko-login</artifactId>
   <packaging>jar</packaging>
 
   <parent>
@@ -11,7 +11,7 @@
     <relativePath>../pom.xml</relativePath>
   </parent>
 
-  <name>Orko UI</name>
+  <name>Orko Login UI</name>
 
   <dependencies>
     <dependency>
