--- a/orko-ui/package.json
+++ b/orko-ui/package.json
@@ -3,58 +3,17 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "@babel/core": "7.5.5",
     "@mars/heroku-js-runtime-env": "^3.0.2",
-    "@svgr/webpack": "4.3.2",
-    "@typescript-eslint/eslint-plugin": "1.13.0",
-    "@typescript-eslint/parser": "1.13.0",
-    "babel-eslint": "10.0.2",
-    "babel-jest": "^24.8.0",
-    "babel-loader": "8.0.6",
-    "babel-plugin-named-asset-import": "^0.3.3",
-    "babel-preset-react-app": "^9.0.1",
-    "camelcase": "^5.2.0",
-    "case-sensitive-paths-webpack-plugin": "2.2.0",
     "compare-versions": "^3.5.1",
     "connected-react-router": "^6.5.2",
     "cookies-js": "^1.2.3",
-    "css-loader": "2.1.1",
-    "dotenv": "6.2.0",
-    "dotenv-expand": "4.2.0",
-    "eslint": "^6.1.0",
-    "eslint-config-react-app": "^5.0.1",
-    "eslint-loader": "2.2.1",
-    "eslint-plugin-flowtype": "3.13.0",
-    "eslint-plugin-import": "2.18.2",
-    "eslint-plugin-jsx-a11y": "6.2.3",
-    "eslint-plugin-react": "7.14.3",
-    "eslint-plugin-react-hooks": "^1.6.1",
     "fetch": "^1.1.0",
-    "file-loader": "3.0.1",
-    "fs-extra": "7.0.1",
-    "html-webpack-plugin": "4.0.0-beta.5",
     "http-proxy-middleware": "^0.19.1",
-    "identity-obj-proxy": "3.0.0",
     "immutable": "^3.8.2",
-    "is-wsl": "^1.1.0",
-    "jest": "24.8.0",
-    "jest-environment-jsdom-fourteen": "0.1.0",
-    "jest-resolve": "24.8.0",
-    "jest-watch-typeahead": "0.3.1",
-    "mini-css-extract-plugin": "0.5.0",
-    "optimize-css-assets-webpack-plugin": "5.0.3",
     "orko-semantic": "../orko-semantic",
-    "pnp-webpack-plugin": "1.5.0",
     "polished": "^3.4.1",
-    "postcss-flexbugs-fixes": "4.1.0",
-    "postcss-loader": "3.0.0",
-    "postcss-normalize": "7.0.1",
-    "postcss-preset-env": "6.7.0",
-    "postcss-safe-parser": "4.0.1",
     "react": "^16.9.0",
     "react-addons-css-transition-group": "^15.6.2",
-    "react-app-polyfill": "^1.0.2",
-    "react-dev-utils": "^9.0.3",
     "react-dom": "^16.9.0",
     "react-grid-layout": "^0.16.6",
     "react-markdown": "^4.2.2",
@@ -62,6 +21,7 @@
     "react-redux": "^7.1.1",
     "react-rnd": "^10.0.0",
     "react-router-dom": "^5.0.1",
+    "react-scripts": "3.1.1",
     "react-table": "^6.10.0",
     "recompose": "^0.30.0",
     "reconnecting-websocket": "^4.1.10",
@@ -69,29 +29,18 @@
     "redux-batched-actions": "^0.4.1",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
-    "resolve": "1.12.0",
-    "resolve-url-loader": "3.1.0",
-    "sass-loader": "7.2.0",
     "seamless-immutable": "^7.1.4",
     "semantic-ui-react": "^0.88.0",
-    "semver": "6.3.0",
-    "style-loader": "1.0.0",
     "styled-components": "^4.3.2",
     "styled-system": "^5.1.1",
-    "terser-webpack-plugin": "1.4.1",
-    "ts-pnp": "1.1.2",
-    "url-loader": "2.1.0",
     "uuid": "^3.3.3",
-    "webpack": "4.39.1",
-    "webpack-dev-server": "3.2.1",
-    "webpack-manifest-plugin": "2.0.4",
-    "whatwg-fetch": "^3.0.0",
-    "workbox-webpack-plugin": "4.3.1"
+    "whatwg-fetch": "^3.0.0"
   },
   "scripts": {
-    "start": "node scripts/start.js",
-    "build": "export INLINE_RUNTIME_CHUNK=false && node scripts/build.js",
-    "test": "node scripts/test.js"
+    "start": "react-scripts start",
+    "build": "export INLINE_RUNTIME_CHUNK=false && react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -102,58 +51,5 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "devDependencies": {},
-  "jest": {
-    "roots": [
-      "<rootDir>/src"
-    ],
-    "collectCoverageFrom": [
-      "src/**/*.{js,jsx,ts,tsx}",
-      "!src/**/*.d.ts"
-    ],
-    "setupFiles": [
-      "react-app-polyfill/jsdom"
-    ],
-    "setupFilesAfterEnv": [],
-    "testMatch": [
-      "<rootDir>/src/**/__tests__/**/*.{js,jsx,ts,tsx}",
-      "<rootDir>/src/**/*.{spec,test}.{js,jsx,ts,tsx}"
-    ],
-    "testEnvironment": "jest-environment-jsdom-fourteen",
-    "transform": {
-      "^.+\\.(js|jsx|ts|tsx)$": "<rootDir>/node_modules/babel-jest",
-      "^.+\\.css$": "<rootDir>/config/jest/cssTransform.js",
-      "^(?!.*\\.(js|jsx|ts|tsx|css|json)$)": "<rootDir>/config/jest/fileTransform.js"
-    },
-    "transformIgnorePatterns": [
-      "[/\\\\]node_modules[/\\\\].+\\.(js|jsx|ts|tsx)$",
-      "^.+\\.module\\.(css|sass|scss)$"
-    ],
-    "modulePaths": [],
-    "moduleNameMapper": {
-      "^react-native$": "react-native-web",
-      "^.+\\.module\\.(css|sass|scss)$": "identity-obj-proxy"
-    },
-    "moduleFileExtensions": [
-      "web.js",
-      "js",
-      "web.ts",
-      "ts",
-      "web.tsx",
-      "tsx",
-      "json",
-      "web.jsx",
-      "jsx",
-      "node"
-    ],
-    "watchPlugins": [
-      "jest-watch-typeahead/filename",
-      "jest-watch-typeahead/testname"
-    ]
-  },
-  "babel": {
-    "presets": [
-      "react-app"
-    ]
-  }
+  "devDependencies": {}
 }
