--- a/orko-login/package.json
+++ b/orko-login/package.json
@@ -7,17 +7,22 @@
     "@types/node": "^12.7.4",
     "@types/react": "^16.9.2",
     "@types/react-dom": "^16.9.0",
+    "cookies-js": "^1.2.3",
+    "customize-cra": "^0.6.0",
+    "orko-semantic": "../orko-semantic",
     "react": "^16.9.0",
+    "react-app-rewired": "^2.1.3",
     "react-dom": "^16.9.0",
+    "semantic-ui-react": "^0.88.0",
     "typescript": "^3.6.2"
   },
   "devDependencies": {
     "react-scripts": "3.1.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
