--- a/orko-ui/package.json
+++ b/orko-ui/package.json
@@ -4,9 +4,14 @@
   "private": true,
   "dependencies": {
     "@mars/heroku-js-runtime-env": "^3.0.2",
+    "@types/jest": "^24.0.18",
+    "@types/node": "^12.7.4",
+    "@types/react": "^16.9.2",
+    "@types/react-dom": "^16.9.0",
     "compare-versions": "^3.5.1",
     "connected-react-router": "^6.5.2",
     "cookies-js": "^1.2.3",
+    "customize-cra": "^0.6.0",
     "fetch": "^1.1.0",
     "http-proxy-middleware": "^0.19.1",
     "immutable": "^3.8.2",
@@ -14,6 +19,7 @@
     "polished": "^3.4.1",
     "react": "^16.9.0",
     "react-addons-css-transition-group": "^15.6.2",
+    "react-app-rewired": "^2.1.3",
     "react-dom": "^16.9.0",
     "react-grid-layout": "^0.16.6",
     "react-markdown": "^4.2.2",
@@ -33,6 +39,7 @@
     "semantic-ui-react": "^0.88.0",
     "styled-components": "^4.3.2",
     "styled-system": "^5.1.1",
+    "typescript": "^3.6.2",
     "uuid": "^3.3.3",
     "whatwg-fetch": "^3.0.0"
   },
