--- a/orko-login/package.json
+++ b/orko-login/package.json
@@ -9,7 +9,6 @@
     "@types/react-dom": "^16.9.0",
     "cookies-js": "^1.2.3",
     "customize-cra": "^0.6.0",
-    "orko-semantic": "../orko-semantic",
     "react": "^16.9.0",
     "react-app-rewired": "^2.1.3",
     "react-dom": "^16.9.0",
@@ -20,8 +19,8 @@
     "react-scripts": "3.1.1"
   },
   "scripts": {
-    "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
+    "start": "PORT=3001 react-app-rewired start",
+    "build": "export INLINE_RUNTIME_CHUNK=false && react-app-rewired build",
     "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
