--- a/orko-ui/package.json
+++ b/orko-ui/package.json
@@ -15,7 +15,6 @@
     "fetch": "^1.1.0",
     "http-proxy-middleware": "^0.19.1",
     "immutable": "^3.8.2",
-    "orko-semantic": "../orko-semantic",
     "polished": "^3.4.1",
     "react": "^16.9.0",
     "react-addons-css-transition-group": "^15.6.2",
@@ -44,9 +43,9 @@
     "whatwg-fetch": "^3.0.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "export INLINE_RUNTIME_CHUNK=false && react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "export INLINE_RUNTIME_CHUNK=false && react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
