--- a/orko-login/tsconfig-paths.json
+++ b/orko-login/tsconfig-paths.json
@@ -2,8 +2,8 @@
   "compilerOptions": {
     "baseUrl": "src",
     "paths": {
-      "@orko-js-common/*": ["../js-common/*"],
-      "@orko-semantic/*": ["../orko-semantic/dist/*"]
+      "@orko-js-common/*": ["../../js-common/*"],
+      "@orko-semantic/*": ["../../orko-semantic/dist/*"]
     }
   }
 }
