--- a/orko-ui/package.json
+++ b/orko-ui/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
+    "@craco/craco": "^5.4.0",
     "@mars/heroku-js-runtime-env": "^3.0.2",
     "@types/jest": "^24.0.18",
     "@types/node": "^12.7.4",
@@ -18,9 +19,9 @@
     "polished": "^3.4.1",
     "react": "^16.9.0",
     "react-addons-css-transition-group": "^15.6.2",
-    "react-app-rewired": "^2.1.3",
     "react-dom": "^16.9.0",
     "react-grid-layout": "^0.16.6",
+    "react-loadable": "^5.5.0",
     "react-markdown": "^4.2.2",
     "react-page-visibility": "^4.1.1",
     "react-redux": "^7.1.1",
@@ -43,9 +44,9 @@
     "whatwg-fetch": "^3.0.0"
   },
   "scripts": {
-    "start": "react-app-rewired start",
-    "build": "export INLINE_RUNTIME_CHUNK=false && react-app-rewired build",
-    "test": "react-app-rewired test",
+    "start": "craco start",
+    "build": "export INLINE_RUNTIME_CHUNK=false && craco build",
+    "test": "craco test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
