May reverse this

--- a/orko-ui/tsconfig-paths.json
+++ b/orko-ui/tsconfig-paths.json
@@ -4,7 +4,8 @@
     "paths": {
       "@orko-semantic/*": ["../orko-semantic/dist/*"],
       "@orko-ui-common/*": ["./modules/common/*"],
-      "@orko-ui-auth/*": ["./modules/auth/*"]
+      "@orko-ui-auth/*": ["./modules/auth/*"],
+      "@orko-ui-socket/*": ["./modules/socket/*"]
     }
   }
 }
