Move market related non-store code to a new module

--- a/orko-ui/tsconfig-paths.json
+++ b/orko-ui/tsconfig-paths.json
@@ -6,7 +6,8 @@
       "@orko-ui-common/*": ["./modules/common/*"],
       "@orko-ui-auth/*": ["./modules/auth/*"],
       "@orko-ui-socket/*": ["./modules/socket/*"],
-      "@orko-ui-log/*": ["./modules/log/*"]
+      "@orko-ui-log/*": ["./modules/log/*"],
+      "@orko-ui-market/*": ["./modules/market/*"]
     }
   }
 }
