--- a/orko-ui/package.json
+++ b/orko-ui/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^12.7.4",
     "@types/react": "^16.9.2",
     "@types/react-dom": "^16.9.0",
+    "@types/react-grid-layout": "^0.16.7",
     "compare-versions": "^3.5.1",
     "connected-react-router": "^6.5.2",
     "cookies-js": "^1.2.3",
