--- a/pom.xml
+++ b/pom.xml
@@ -220,13 +220,13 @@
     <autovalue.version>1.6.6</autovalue.version>
     <dropwizard.version>1.3.14</dropwizard.version>
 
-    <!--<xchange.groupid>org.knowm.xchange</xchange.groupid> -->
+    <!--<xchange.groupid>com.gruelbox</xchange.groupid> -->
     <xchange.groupid>org.knowm.xchange</xchange.groupid>
     <xchange.version>4.4.0</xchange.version>
 
-    <!--<xchange.stream.groupid>info.bitrich.xchange-stream</xchange.stream.groupid> -->
+    <!--<xchange.stream.groupid>com.gruelbox</xchange.stream.groupid> -->
     <xchange.stream.groupid>info.bitrich.xchange-stream</xchange.stream.groupid>
-    <xchange.stream.version>4.3.17-SNAPSHOT</xchange.stream.version>
+    <xchange.stream.version>4.4.0</xchange.stream.version>
 
     <morf.groupid>com.github.badgerwithagun.morf</morf.groupid>
     <morf.version>0.1.3.badgerwithagun.2</morf.version>
