--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <connection>scm:git:https://github.com/gruelbox/orko.git</connection>
     <developerConnection>scm:git:git@github.com:gruelbox/orko.git</developerConnection>
     <url>https://github.com/gruelbox/orko</url>
-    <tag>0.14.3</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <issueManagement>
@@ -40,7 +40,7 @@
 
   <groupId>com.gruelbox</groupId>
   <artifactId>orko-parent</artifactId>
-  <version>0.14.3</version>
+  <version>0.15.1-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <modules>
