Remove unnecessary typescript aliases

--- a/orko-ui/tsconfig-paths.json
+++ b/orko-ui/tsconfig-paths.json
@@ -2,12 +2,7 @@
   "compilerOptions": {
     "baseUrl": "src",
     "paths": {
-      "@orko-semantic/*": ["../orko-semantic/dist/*"],
-      "@orko-ui-common/*": ["./modules/common/*"],
-      "@orko-ui-auth/*": ["./modules/auth/*"],
-      "@orko-ui-socket/*": ["./modules/socket/*"],
-      "@orko-ui-log/*": ["./modules/log/*"],
-      "@orko-ui-market/*": ["./modules/market/*"]
+      "@orko-semantic/*": ["../orko-semantic/dist/*"]
     }
   }
 }
