--- a/orko-exchange-broker/example-config.yml
+++ b/orko-exchange-broker/example-config.yml
@@ -1,18 +1,7 @@
 scriptSigningKey: "MAKE SURE YOU CHANGE THIS IN PRODUCTION"
-auth:
+auth: # TODO remove
   httpsOnly: false
   proxied: false
-#  ipWhitelisting:
-#    whitelistExpirySeconds: 86400
-#    secretKey: YOURTOKEN
-#  jwt:
-#    userName: joe
-#    password: bloggs
-#    secret: CHANGEME!!!!!!!!23423rwefsdf13cr123de1234d1243d1ewdfsdfcsdfsdf12222
-#    secondFactorSecret: YOURTOKEN
-#    expirationMinutes: 1440
-database:
-  connectionString: h2:file:./orko;DB_CLOSE_DELAY=-1;MVCC=TRUE;DEFAULT_LOCK_TIMEOUT=60000
 # telegram:
 #   botToken: YOU
 #   chatId: REALLYWANTTHIS
@@ -61,11 +50,33 @@ server:
   applicationContextPath: /
   connector:
     type: http
-    port: 8080
+    port: 8081
   maxThreads: 16
 logging:
   loggers:
     "com.gruelbox.orko": INFO
-    "com.gruelbox.orko.app.exchangebroker": DEBUG
+    "com.gruelbox.orko.app.exchangebroker": INFO
     "si.mazi.rescu": ERROR
-remoteData: false
+producer:
+  type: basic
+  bootstrapServers:
+    - localhost:9092
+  name: marketdata
+  keySerializer:
+    type: string
+  valueSerializer:
+    type: string
+  acks: all
+  retries: 2147483647 # int max value
+  maxInFlightRequestsPerConnection: 1
+  maxPollBlockTime: 10s
+consumer: 
+  type: basic
+  bootstrapServers:
+    - localhost:9092
+  consumerGroupId: marketdata
+  name: marketdata  
+  keyDeserializer:
+    type: string
+  valueDeserializer:
+    type: string
