--- a/pom.xml
+++ b/pom.xml
@@ -52,8 +52,6 @@
     <module>orko-job</module>
     <module>orko-common</module>
     <module>orko-app</module>
-    <module>orko-exchange-broker</module>
-    <module>orko-job-broker</module>
   </modules>
 
   <repositories>
@@ -102,6 +100,13 @@
       <modules>
         <module>orko-semantic</module>
         <module>orko-ui</module>
+      </modules>
+    </profile>
+    <profile>
+      <id>brokers</id>
+      <modules>
+        <module>orko-exchange-broker</module>
+        <module>orko-job-broker</module>
       </modules>
     </profile>
     <profile>
@@ -214,6 +219,7 @@
   <name>Orko</name>
 
   <properties>
+  
     <min.maven.version>3.0.0</min.maven.version>
     <maven.compiler.source>11</maven.compiler.source>
     <maven.compiler.target>11</maven.compiler.target>
@@ -541,6 +547,11 @@
         <artifactId>kafka-clients</artifactId>
         <version>2.3.0</version>
       </dependency>
+      <dependency>
+        <groupId>io.dropwizard.modules</groupId>
+        <artifactId>dropwizard-kafka</artifactId>
+        <version>1.3.15-1</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 
@@ -672,7 +683,42 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-shade-plugin</artifactId>
-          <version>3.2.1</version>
+          <executions>
+            <execution>
+              <id>shade</id>
+              <phase>package</phase>
+              <goals>
+                <goal>shade</goal>
+              </goals>
+              <configuration>
+                <createDependencyReducedPom>true</createDependencyReducedPom>
+                <filters>
+                  <filter>
+                    <artifact>*:*</artifact>
+                    <excludes>
+                      <exclude>META-INF/*.SF</exclude>
+                      <exclude>META-INF/*.DSA</exclude>
+                      <exclude>META-INF/*.RSA</exclude>
+                    </excludes>
+                  </filter>
+                </filters>
+                <transformers>
+                  <transformer
+                    implementation="org.apache.maven.plugins.shade.resource.ApacheLicenseResourceTransformer" />
+                  <transformer
+                    implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
+                  <transformer
+                    implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                    <mainClass>${mainClass}</mainClass>
+                  </transformer>
+                  <transformer
+                    implementation="org.apache.maven.plugins.shade.resource.ApacheNoticeResourceTransformer">
+                    <addHeader>false</addHeader>
+                  </transformer>
+                </transformers>
+              </configuration>
+            </execution>
+          </executions>
         </plugin>
         <plugin>
           <groupId>com.bazaarvoice.maven.plugins</groupId>
@@ -716,7 +762,7 @@
                 <jvmFlag>-Dcom.sun.management.jmxremote.local.only=false</jvmFlag>
                 <jvmFlag>-Djava.rmi.server.hostname=localhost</jvmFlag>
               </jvmFlags>
-              <mainClass>${project.mainClass}</mainClass>
+              <mainClass>${mainClass}</mainClass>
             </container>
           </configuration>
           <executions>
