Make all apps deploy to Docker Hub, add remote worker config for Docker image

--- a/.gitignore
+++ b/.gitignore
@@ -1,39 +1,27 @@
 **/.classpath
 **/.factorypath
 **/.project
-**/.settings/org.eclipse.core.resources.prefs
-**/.settings/org.eclipse.jdt.apt.core.prefs
-**/.settings/org.eclipse.jdt.core.prefs
-**/.settings/org.eclipse.m2e.core.prefs
-**/.settings/org.jboss.tools.maven.apt.prefs
-**/.settings/edu.umd.cs.findbugs.core.prefs
+**/.settings
 **/.checkstyle
 **/.fbExcludeFilterFile
 **/dependency-reduced-pom.xml
-/release.properties
-/my-config.yml
-/orko-worker/my-config.yml
-/orko-web/my-config.yml
+**/orko.mv.db
+**/orko.trace.db
+**/*.versionsBackup
+**/*.releaseBackup
 **/node_modules
-/orko-api/dependency-reduced-pom.xml
-/orko-web/dependency-reduced-pom.xml
-/orko-worker/dependency-reduced-pom.xml
-/target/orko-parent-0.0.1-SNAPSHOT-shaded.pom
-/orko-app/my-config.yml
-/target/
-/orko-common/.settings/org.jboss.tools.maven.apt.prefs
-/orko-ui/.settings
-/orko-ui/node
+/release.properties
+**/my-config.yml
 /orko-app/src/main/resources/assets
-/**/orko.mv.db
-/**/orko.trace.db
 /orko-end-to-end-testing/cypress/**/*.mp4
 /orko-end-to-end-testing/target
 /orko-end-to-end-testing/node
 /orko-end-to-end-testing/app.log
 /orko-end-to-end-testing/cypress/screenshots/**/*
-**/*.versionsBackup
-**/*.releaseBackup
 /orko-semantic/dist/**
 /orko-semantic/target/**
 /orko-semantic/node/**
+/orko-ui/.settings
+/orko-ui/node
+/target/
+/target/orko-parent-0.0.1-SNAPSHOT-shaded.pom
