--- a/pom.xml
+++ b/pom.xml
@@ -741,6 +741,7 @@
           <version>1.6.1</version>
           <configuration>
             <to>
+              <image>docker.io/gruelbox/orko:${docker.tag}</image>
               <auth>
                 <username>${env.DOCKERHUB_USER}</username>
                 <password>${env.DOCKERHUB_PASSWORD}</password>
