--- a/orko-job-broker/src/main/jib/docker-config.yml
+++ b/orko-job-broker/src/main/jib/docker-config.yml
@@ -58,4 +58,5 @@ logging:
     "info.bitrich.xchangestream.binance": ${LOG_LEVEL:-INFO}
     "info.bitrich.xchangestream.gdax": ${LOG_LEVEL:-INFO}
     "info.bitrich.xchangestream.binance.BinanceUserDataStreamingService": ${LOG_LEVEL_BINANCE_RAW_USER:-INFO}
+    "org.apache.kafka.clients": ${LOG_LEVEL_KAFKA:-WARN}
     "si.mazi.rescu": ERROR
