Create local repo to replace jitpack dependency I was getting jittery about the use of Jitpack. I think the morf dependency is going to have to go as this library is not going to get properly maintained.

--- a/orko-common/pom.xml
+++ b/orko-common/pom.xml
@@ -15,6 +15,10 @@
 
   <name>Orko Common</name>
 
+  <properties>
+    <main.basedir>${project.basedir}${file.separator}..</main.basedir>
+  </properties>
+
   <dependencies>
 
     <dependency>
