--- a/orko-app/pom.xml
+++ b/orko-app/pom.xml
@@ -16,6 +16,7 @@
   <name>Orko Monolith Application</name>
 
   <properties>
+    <main.basedir>${project.basedir}${file.separator}..</main.basedir>
     <mainClass>com.gruelbox.orko.app.monolith.MonolithApplication</mainClass>
   </properties>
 
