--- a/orko-base/pom.xml
+++ b/orko-base/pom.xml
@@ -15,6 +15,10 @@
 
   <name>Orko Base</name>
 
+  <properties>
+    <main.basedir>${project.basedir}${file.separator}..</main.basedir>
+  </properties>
+
   <dependencies>
 
     <dependency>
