--- a/orko-job/pom.xml
+++ b/orko-job/pom.xml
@@ -15,6 +15,10 @@
 
   <name>Orko Job</name>
 
+  <properties>
+    <main.basedir>${project.basedir}${file.separator}..</main.basedir>
+  </properties>
+
   <dependencies>
   
     <dependency>
