--- a/pom.xml
+++ b/pom.xml
@@ -65,16 +65,13 @@
       </snapshots>
     </repository>
     <repository>
-      <id>jitpack.io</id>
-      <url>https://jitpack.io</url>
+      <id>local-maven-repo</id>
+      <url>file:///${main.basedir}/local-maven-repo</url>
       <releases>
         <enabled>true</enabled>
-        <updatePolicy>never</updatePolicy>
-        <checksumPolicy>warn</checksumPolicy>
       </releases>
       <snapshots>
         <enabled>false</enabled>
-        <updatePolicy>always</updatePolicy>
       </snapshots>
     </repository>
   </repositories>
@@ -210,6 +207,8 @@
   <name>Orko</name>
 
   <properties>
+    <main.basedir>${project.basedir}</main.basedir>
+
     <min.maven.version>3.0.0</min.maven.version>
     <maven.compiler.source>11</maven.compiler.source>
     <maven.compiler.target>11</maven.compiler.target>
