Fix failing test and docker secret logging

--- a/orko-app/example-config.yml
+++ b/orko-app/example-config.yml
@@ -66,5 +66,6 @@ server:
 logging:
   loggers:
     "com.gruelbox.orko": INFO
+    "com.gruelbox.orko.docker": DEBUG
     "com.gruelbox.orko.app.exchangebroker": DEBUG
     "si.mazi.rescu": ERROR
