--- a/orko-app/integration-test-config.yml
+++ b/orko-app/integration-test-config.yml
@@ -13,7 +13,7 @@ auth:
     secondFactorSecret: O546XLKJMJIQM3PW
     expirationMinutes: 1440
 database:
-  connectionString: h2:mem:test;DB_CLOSE_DELAY=-1;MVCC=TRUE;DEFAULT_LOCK_TIMEOUT=60000
+  connectionString: h2:mem:test;DB_CLOSE_DELAY=-1;DEFAULT_LOCK_TIMEOUT=60000
 exchanges:
   simulated:
     apiKey: OnlineUser
