--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,10 +47,6 @@ workflows:
           filters:
             tags:
               only: /^.*\.((?!SNAPSHOT).)*/
-            branches:
-              only:
-                - master
-                - stable
       - "Deploy release to GitHub":
           requires:
             - "Unit tests (all)"
@@ -254,22 +250,24 @@ jobs:
           name: Deploy release to Docker registry
           command: |
             if [[ (-n "$DOCKERHUB_USER") && (-n "$DOCKERHUB_PASSWORD") ]]; then
-              cd orko-app
-              if [[ -n "$CIRCLE_TAG" ]]; then
-                mvn ${BUILD_ARGS} -Pui,dockerhub jib:build -Ddocker.tag="$CIRCLE_TAG"
+              export DOCKER_TARGET="jib:build"
+            else
+              echo "Docker Hub account details not supplied. Probably an external pull request. Building locally only"
+              export DOCKERHUB_REPO=orko
+              export DOCKER_TARGET="jib:buildTar"
+            fi
+            if [[ -n "$CIRCLE_TAG" ]]; then
+              mvn ${BUILD_ARGS} -Pui,docker $DOCKER_TARGET -Ddocker.tag="$CIRCLE_TAG"
+            else
+              if [[ "$CIRCLE_BRANCH" == "stable" ]]; then
+                mvn ${BUILD_ARGS} -Pui,docker $DOCKER_TARGET -Ddocker.tag="stable"
               else
-                if [[ "$CIRCLE_BRANCH" == "stable" ]]; then
-                  mvn ${BUILD_ARGS} -Pui,dockerhub jib:build -Ddocker.tag="stable"
+                if [[ (-z "$CIRCLE_BRANCH") || ("$CIRCLE_BRANCH" == "master") ]]; then
+                  mvn ${BUILD_ARGS} -Pui,docker $DOCKER_TARGET -Ddocker.tag="latest"
                 else
-                  if [[ (-z "$CIRCLE_BRANCH") || ("$CIRCLE_BRANCH" == "master") ]]; then
-                    mvn ${BUILD_ARGS} -Pui,dockerhub jib:build -Ddocker.tag="latest"
-                  else
-                    echo "Skipping branch"
-                  fi
+                  echo "Skipping branch"
                 fi
               fi
-            else
-              echo "Docker Hub account details not supplied. Probably an external pull request."
             fi
 
   "Deploy release to GitHub":
